--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -25,6 +25,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27f53ef2",
+   "metadata": {},
+   "source": [
+    "Dataset Source: https://jmcauley.ucsd.edu/data/amazon/, https://amazon-reviews-2023.github.io/\n",
+    "\n",
+    "- Rating:               Float:  Rating of the product (from 1.0 to 5.0).\n",
+    "\n",
+    "- Title:                str:    Title of the user review.\n",
+    "\n",
+    "- Text:                 str:    Text body of the user review.\n",
+    "\n",
+    "- Images:               list:   Images that users post after they have received the product. Each image has different sizes.             \n",
+    "\n",
+    "- asin:                 str:    ID of the product.\n",
+    "\n",
+    "- parent_asin:          str:    Parent ID of the product. Note: Products with different colors, styles, sizes usually belong to the same parent ID.\n",
+    "\n",
+    "- user_id:              str:    ID of the reviewer\n",
+    "\n",
+    "- timestamp:            int:    Time of the review (unix time)\n",
+    "\n",
+    "- verified_purchase:    bool:   User purchase verification\n",
+    "\n",
+    "- helpful_vote:         int:    Helpful votes of the review"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "id": "1c7f0b24-44fb-4a3d-b6ef-416d333dfea7",
